# ftransfer

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  transfer.py
.github/workflows/: jekyll.yml  mkdocs.yml
.github/workflows/_archive/: jekyll.yml
docs/: Gemfile  LICENSE-THEME.md  _config.yml  calculate_speed.md  collect_files_recursive.md  core-classes.md  crypto_init.md  decrypt.md  derive_session_key.md  encrypt.md  filewriter.md  format_speed.md  generate_token.md  get_public_key_bytes.md  get_tailscale_ip.md  index.md  log_warning.md  main-functions.md  main.md  receive_files.md  recv_all.md  resourcemonitor.md  securecrypto.md  securetokengenerator.md  send_files.md  tailscaledetector.md  transferlockmanager.md  utility-functions.md  validate_files.md  verify_peer_ip_cached.md
docs/_archive/: Gemfile  _config-local.yml  _config.yml
docs/_archive/_includes/: head.html  header_custom.html
docs/_archive/_site/: LICENSE-THEME.html  calculate_speed.html  collect_files_recursive.html  core-classes.html  crypto_init.html  decrypt.html  derive_session_key.html  encrypt.html  feed.xml  format_speed.html  generate_token.html  get_public_key_bytes.html  get_tailscale_ip.html  index.html  log_warning.html  main-functions.html  main.html  receive_files.html  recv_all.html  resourcemonitor.html  securecrypto.html  securetokengenerator.html  send_files.html  sitemap.xml  tailscaledetector.html  transferlockmanager.html  utility-functions.html  validate_files.html  verify_peer_ip_cached.html
docs/_archive/_site/assets/js/: search-data.json
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/assets/fonts/: whitney.css
docs/assets/js/: dark-mode.js  theme-toggle.js
