[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftransfer"
version = "1.0.0"
description = "Secure file transfer tool for Tailscale networks with end-to-end encryption"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.7"
authors = [
    {name = "ftransfer contributors"}
]
keywords = ["file-transfer", "tailscale", "encryption", "chacha20", "secure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]

dependencies = [
    "cryptography>=41.0.0",
    "netifaces-plus>=0.12.4",
    "blosc>=1.11.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocs-minify-plugin>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/ftransfer"
Documentation = "https://github.com/anthropics/ftransfer#readme"
Repository = "https://github.com/anthropics/ftransfer"
Issues = "https://github.com/anthropics/ftransfer/issues"

[project.scripts]
transfer = "transfer:main"

[tool.setuptools]
py-modules = ["transfer"]
